singularity/benchmarks/jobs/error3285676.err
Traceback (most recent call last):
  File "main.py", line 23, in <module>
    from utils.benchmark import benchmark_routine
  File "/v2c/vox2cortex/utils/benchmark.py", line 58
    List = [model_name, percentUsed, total, free, used, hostname, subj])
                                                                       ^
SyntaxError: invalid syntax
